# ml-from-scratch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  init_project.sh  pyproject.toml  requirements-dev.txt
docs/: decision_tree_math.md  linear_regression_math.md  logistic_regression_math.md  softmax_regression_math.md
examples/: decision_tree_classifier_demo.ipynb  decision_tree_demo.ipynb  decision_tree_regressor_demo.ipynb  linear_regression_demo.ipynb  linear_regression_demo.py  logistic_regression_demo.ipynb  random_forest_classifier_demo.ipynb  random_forest_regressor_demo.ipynb  softmax_regression.demo.ipynb
src/mlscratch/: decision_tree_classifier.py  decision_tree_regressor.py  linear_regression.py  logistic_regression.py  random_forest.py  softmax_regression.py  utils.py
src/mlscratch/utils/: __init__.py  array_utils.py  data_utils.py  math_utils.py  metrics.py  plotting.py
