[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlscratch"
version = "0.1.0"
description = "Machine learning algorithms implemented from scratch in Python."
authors = [
  { name = "Luke Yao", email = "xyao011@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib"
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "isort", "nbmake"]

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]
